# SpeedrunBot

./: .env.example  .gitignore  COPYING.md  Dockerfile  README.md  bot.py  build.gradle.kts  config.py-example  context.py  database.db  fair.json  main.py  migrate.py  pyproject.toml  requirements.txt  settings.gradle.kts  starboard_config.json
.github/workflows/: build.yml
bot/: build.gradle.kts
bot/src/main/kotlin/io/github/null2264/speedrunbot/: Main.kt
bot/src/main/kotlin/io/github/null2264/speedrunbot/core/: Bot.kt  Context.kt
bot/src/main/kotlin/io/github/null2264/speedrunbot/core/di/: AppModule.kt
bot/src/main/kotlin/io/github/null2264/speedrunbot/core/internal/: BaseBot.kt  BaseModule.kt  BotModule.kt  Command.kt  CommandObj.kt  Context.kt
bot/src/main/kotlin/io/github/null2264/speedrunbot/core/internal/annotation/: Command.kt
bot/src/main/kotlin/io/github/null2264/speedrunbot/core/internal/error/: CommandException.kt  CommandNotFound.kt
bot/src/main/kotlin/io/github/null2264/speedrunbot/core/lib/: Extension.kt
bot/src/main/kotlin/io/github/null2264/speedrunbot/core/module/: DeveloperModule.kt  GeneralModule.kt
cogs/: dev.py  error_handler.py  fair.py  fun.py  fun_comms.py  general.py  insults.py  mod.py  mod_comms.py  runget.py  src.py  srcinfo.py  starboard.py  starboard.py.old  stars.py
cogs/utilities/: barter.py  formatting.py  paginator.py  src.py
src/aiocqlengine/: models.py  query.py  session.py
src/bot/core/: bot.py  config.py  context.py  db.py
src/bot/exts/: dev.py  error_handler.py  fair.py  fun.py  general.py  mod.py  runget.py  src.py  starboard.py.old  stars.py
src/bot/exts/utilities/: barter.py  formatting.py  paginator.py  src.py
