[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "mango-man-bot"
version = "0.1.0"
[tool.poetry.dependencies]
aiohttp = "^3.7.3"
aiosqlite = "^0.16.1"
config = "^0.5.0"
discord = "^1.0.1"
flask = "^1.1.2"
python = "^3.8"
pytz = "^2021.1"
replit = "^2.0.0"
ujson = "^4.0.2"
uvloop = "^0.14.0"
"zidiscord.py" = "^1.7.0"
[tool.poetry.dependencies."speedrun.py"]
branch = "master"
git = "https://github.com/null2264/speedrun.py.git"
[tool.poetry.dev-dependencies]
